--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,4 +1,4 @@
-name: Docker Image CI
+name: Containewr App CI/CD
 
 on:
   push:
@@ -8,7 +8,7 @@ on:
 
 jobs:
 
-  build:
+  build-and-deploy:
 
     runs-on: ubuntu-latest
 
@@ -22,16 +22,21 @@ jobs:
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
-
-    - name: Build and publish container image
+    - name: ACR Login
       uses: azure/cli@v2
       with:
         azcliversion: latest
         inlineScript: |
-          docker build . -t ${{ secrets.ACR_REGISTRY_SERVER }}/demoapp:${{ github.sha }}
-          docker push ${{ secrets.ACR_REGISTRY_SERVER }}/demoapp:${{ github.sha }}
+          az acr login --name ${{ env.ACR_NAME }}
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+
+    - name: Build and push
+      uses: docker/build-push-action@v6
+      with:
+        push: true
+        tags: ${{ env.ACR_REGISTRY_SERVER }}/demoapp:${{ github.sha }}
 
     - name: Deploy or update container app
       uses: azure/cli@v2
@@ -42,13 +47,13 @@ jobs:
 
           if [ $? -eq 0 ]; then
             az containerapp update -n my-container-app -g $RG_NAME \
-              --image ${{ secrets.ACR_REGISTRY_SERVER }}/demoapp:${{ github.sha }}
+              --image ${{ env.ACR_REGISTRY_SERVER }}/demoapp:${{ github.sha }}
           else
             az containerapp create \
               --name my-container-app \
               --resource-group $RG_NAME \
               --environment $AZURE_CONTAINER_ENVIRONMENT_NAME \
-              --image ${{ secrets.ACR_REGISTRY_SERVER }}/demoapp:${{ github.sha }} \
+              --image ${{ env.ACR_REGISTRY_SERVER }}/demoapp:${{ github.sha }} \
               --target-port 80 \
               --ingress external \
               --query properties.configuration.ingress.fqdn \
