--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -27,7 +27,10 @@ jobs:
       with:
         azcliversion: latest
         inlineScript: |
-          az acr login -n ${{ env.ACR_NAME }} -g ${{ env.RG_NAME }}
+          az acr login -n $ACR_NAME -g $RG_NAME
+      env:
+        ACR_NAME: ${{ env.ACR_NAME }}
+        RG_NAME: ${{ env.RG_NAME }}  
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
