--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -33,10 +33,8 @@ jobs:
           echo "2. ACR_NAME= %ACR_NAME%"
           echo "3. ACR_NAME= $ACR_NAME"
           echo "4. acr_name= %acr_name%"
-          echo "5. env.ACR_NAME= ${{ env.ACR_NAME }}"
-          az acr login -n $ACR_NAME
-      env:
-        ACR_NAME: ${{ env.ACR_NAME }}
+          echo "5. env.ACR_NAME= ${{ secrets.ACR_NAME }}"
+          az acr login -n ${{ secrets.ACR_NAME }}
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
@@ -46,28 +44,28 @@ jobs:
       with:
         context: demoapp
         push: true
-        tags: ${{ env.ACR_REGISTRY_SERVER }}/demoapp:${{ github.sha }}
+        tags: ${{ secrets.ACR_REGISTRY_SERVER }}/demoapp:${{ github.sha }}
 
     - name: Deploy or update container app
       uses: azure/cli@v2
       with:
         azcliversion: latest
         inlineScript: |
-          az containerapp show --name my-container-app --resource-group ${{ env.RG_NAME }}
+          az containerapp show --name my-container-app --resource-group ${{ secrets.RG_NAME }}
 
           if [ $? -eq 0 ]; then
-            az containerapp update -n my-container-app -g ${{ env.RG_NAME }} \
-              --image ${{ env.ACR_REGISTRY_SERVER }}/demoapp:${{ github.sha }}
+            az containerapp update -n my-container-app -g ${{ secrets.RG_NAME }} \
+              --image ${{ secrets.ACR_REGISTRY_SERVER }}/demoapp:${{ github.sha }}
           else
             az containerapp create \
               --name my-container-app \
-              --resource-group ${{ env.RG_NAME }} \
-              --environment ${{ env.AZURE_CONTAINER_ENVIRONMENT_NAME }} \
-              --image ${{ env.ACR_REGISTRY_SERVER }}/demoapp:${{ github.sha }} \
+              --resource-group ${{ secrets.RG_NAME }} \
+              --environment ${{ secrets.AZURE_CONTAINER_ENVIRONMENT_NAME }} \
+              --image ${{ secrets.ACR_REGISTRY_SERVER }}/demoapp:${{ github.sha }} \
               --target-port 80 \
               --ingress external \
               --query properties.configuration.ingress.fqdn \
               --user-assigned ${{ secrets.ACA_IDENTITY_ID }} \
               --registry-identity ${{ secrets.ACA_IDENTITY_ID }} \
-              --registry-server ${{ env.ACR_REGISTRY_SERVER }}
+              --registry-server ${{ secrets.ACR_REGISTRY_SERVER }}
           fi
