--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -25,20 +25,16 @@ jobs:
     - name: Set up Docker
       uses: docker/setup-docker-action@v4
 
-    - name: ACR Login
+    - name: ACR Build Container Image
       uses: azure/cli@v2
       with:
         azcliversion: latest
         inlineScript: |
-          TOKEN=$(az acr login -n ${{ secrets.ACR_NAME }} --expose-token --output tsv --query accessToken)
-          echo "##vso[task.setvariable variable=DOCKER_AUTH_CONFIG;isOutput=true]$(echo $TOKEN | docker login ${{ secrets.ACR_REGISTRY_SERVER }} --username ${{ secrets.ACR_NAME }} --password-stdin)"
-
-    - name: Build and push
-      uses: docker/build-push-action@v6
-      with:
-        context: demoapp
-        push: true
-        tags: ${{ secrets.ACR_REGISTRY_SERVER }}/demoapp:${{ github.sha }}
+          az acr build \
+            --registry ${{ secrets.ACR_NAME }} \
+            --image demoapp:${{ github.sha }} \
+            --file demoapp/Dockerfile \
+            ./demoapp
 
     - name: Deploy or update container app
       uses: azure/cli@v2
